# package-simple-evals

./: .gitignore  .gitmodules  LICENSE  README.md  build.py  pyproject.toml  setup_package.py
.github/workflows/: test.yaml
simple_evals/: __init__.py
simple_evals/sampler/: __init__.py
tests/: README.md  test_human_eval_installation.py  test_import.py  test_install.py  test_simple_evals_human_eval_integration.py
