[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-evals"
version = "0.1.0"
description = "A wrapper to make OpenAI's simple_evals and human_eval installable with pip and UV"
readme = "simple-evals/README.md"
authors = [
    {name = "Graphcore Research", email = "info@graphcore.ai"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "requests",
    "jinja2",
    "scipy",
    "fire",  # Required for human-eval
    "openai>=1.0.0",
    "anthropic>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.12.0",
]

[project.scripts]
simple_evals = "simple_evals:main"

[tool.setuptools]
# Define multiple packages in the same project
packages = ["simple_evals", "simple_evals.sampler", "human_eval"]
include-package-data = true

[tool.setuptools.package-dir]
"human_eval" = "human-eval/human_eval"
# "data" = "human-eval/data"  # Map the data directory

[tool.setuptools.dynamic]
version = {attr = "simple_evals.__version__"}

[tool.setuptools.package-data]
"simple_evals" = ["**/*.json", "**/*.jsonl", "**/*.csv", "**/*.txt"]
"human_eval" = ["**/*.json", "**/*.txt", "**/*.py"]
# "data" = ["**/*.jsonl.gz", "**/*.json"]  # Include data files in human-eval/data

# Custom build and install steps
[tool.setuptools.cmdclass]
build_py = "build.BuildCommand"
# install = "build.InstallCommand"

# Pytest configuration
[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"